--- a/index.html
+++ b/index.html
@@ -2,4 +2,9 @@
 layout: default
 ---
 
-<h1 class="worksans">Hypha</h1>
+{%- include sections.html path="cover.html" class="" -%}
+{%- include sections.html path="about.html" class="" -%}
+{%- include sections.html path="what-we-do.html" class="" -%}
+{%- include sections.html path="work-with-us.html" class="" -%}
+{%- include sections.html path="our-values.html" class="" -%}
+{%- include sections.html path="who-we-are.html" class="" -%}
