--- a/dripline.html
+++ b/dripline.html
@@ -13,6 +13,10 @@ order: 2
     <h3 class="measure-wide f2 f1-m f-subheadline-l measure-narrow lh-solid accent normal worksans">
       {{ page.title }}
     </h3>
+    <p class="worksans">
+      A dripline signifies the area under the outermost branches of a tree.
+      It’s this <a href="https://permacultureprinciples.com/principles/_11/" target="_blank" class="accent link underline-hover" rel="noopener">interface</a> between worlds where interesting and productive things happen.
+    </p>
   </div>
 </div>
   </header>
