add initial new description

--- a/dripline.html
+++ b/dripline.html
@@ -13,6 +13,7 @@ order: 2
     <h3 class="measure-wide f2 f1-m f-subheadline-l measure-narrow lh-solid accent normal worksans">
       {{ page.title }}
     </h3>
+    <p class="f3 f3-l dark-gray">A place for our collective writing ranging from short posts, to interviews, design retrospectives, and essays. We aim to publish on a bimonthly schedule and draw inspiration and analogies from permaculture, forestry, gardening, and other natural concepts.</p>
     <p class="worksans">
       A dripline signifies the area under the outermost branches of a tree.
       It’s this <a href="https://permacultureprinciples.com/principles/_11/" target="_blank" class="accent link underline-hover" rel="noopener">interface</a> between worlds where interesting and productive things happen.
