--- a/dripline.html
+++ b/dripline.html
@@ -26,7 +26,7 @@ order: 2
     <ul class="list pl0 mv0 flex-l flex-wrap">
       {%- assign date_format = site.date_format -%}
       {%- for post in posts -%}
-      <li class="w-70 w-50-l">
+      <li class="w-70 w-50-l pr1">
         <a class="no-underline" href="{{ post.url | relative_url }}">
           <h3 class="f2 f1-l mt0 mb2 worksans normal accent link underline-hover">
             {{ post.title | escape }}
