add dripline exerpt and dripline name to social cards

--- a/dripline.html
+++ b/dripline.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: Dripline
+excerpt: "A dripline signifies the area under the outermost branches of a tree. It's this interface between worlds where interesting and productive things happen."
 menu_title: Dripline
 order: 2
 ---
