--- a/dripline.html
+++ b/dripline.html
@@ -19,7 +19,7 @@ order: 2
       {{ page.title }}
     </h3>
     <p class="f3 measure-wide dark-gray lh-copy mb6">
-      A place for our collective writing ranging from short posts, to interviews, design retrospectives, and essays. We aim to publish on a bimonthly schedule and draw inspiration and analogies from permaculture, forestry, gardening, and other natural concepts.</p>
+       A place for our collective writing ranging from short posts, to interviews, design retrospectives, and essays. We publish on a monthly schedule and draw inspiration and analogies from permaculture, forestry, gardening, and other natural concepts. </p>
   </div>
 </div>
   </header>
