--- a/people.html
+++ b/people.html
@@ -11,32 +11,16 @@ order: 3
   <header>
 <div class="flex-l items-center mv2">
   <div class="w-100-l">
-    <p class="worksans">
-      A dripline signifies the area under the outermost branches of a tree.
-      It’s this <a href="https://permacultureprinciples.com/principles/_11/" target="_blank" class="accent link underline-hover" rel="noopener">interface</a> between worlds where interesting and productive things happen.
-    </p>
+    
     <h3 class=" f2 f1-m f-subheadline-l accent normal worksans mb4 lh-solid">
       {{ page.title }}
     </h3>
     <p class="f3 measure-wide dark-gray lh-copy mb6">
-       A place for our collective writing ranging from short posts, to interviews, design retrospectives, and essays. We publish on a monthly schedule and draw inspiration and analogies from permaculture, forestry, gardening, and other natural concepts. </p>
+    As a non-profit worker co-operative, Hypha strives to cultivate collective growth and meaningful livelihoods through learning and building digital technologies together.
+    </p>
   </div>
 </div>
   </header>
-  {%- if posts.size > 0 -%}
-    <div class="flex flex-wrap pl0">
-      {%- assign date_format = site.date_format -%}
-      {%- for post in posts -%}
-      <div class="measure mr5 mr0-s mb4">
-        <a class="no-underline" href="{{ post.url | relative_url }}">
-          <h3 class="f2 mt0 mb3 worksans normal accent link underline-hover lh-title">
-            {{ post.title | escape }}
-          </h3>
-          <p class="mt0 f3 mb3 dark-gray measure lh-copy">{{ post.excerpt }}</p>
-        </a>
-        <h4 class="f4 gray mt0">{%- if post.author != "Hypha" -%}{{ post.author }},&nbsp;{%- endif -%}{{ post.date | date: date_format }}</h4>
-      </div>
-      {%- endfor -%}
-    </div>
-  {%- endif -%}
+
+{%- include sections.html path="team-bios.html" class="" -%}
 </section>
