--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@ order: 1
 
 {%- include sections.html path="about.html" class="" -%}
 {%- include sections.html path="what-we-do.html" class="" -%}
+{%- include sections.html path="work-preview.html" class="" -%}
 {%- include sections.html path="who-we-are.html" class="" -%}
 {%- include sections.html path="our-values.html" class="" -%}
 {%- include sections.html path="work-with-us.html" class="mv5" -%}
