many small wireframe adjustments

--- a/dripline.html
+++ b/dripline.html
@@ -10,16 +10,18 @@ order: 4
 <section class="mt4 ph3 ph5-l">
   <header>
 <div class="flex-l items-center mv2">
-  <div class="w-100-l">
-    <p class="worksans">
-      A dripline signifies the area under the outermost branches of a tree.
-      It’s this <a href="https://permacultureprinciples.com/principles/_11/" target="_blank" class="accent link underline-hover" rel="noopener">interface</a> between worlds where interesting and productive things happen.
-    </p>
+  <div class="w-100-l mb6">
+    
     <h3 class=" f2 f1-m f-subheadline-l accent normal worksans mb4 lh-solid">
       {{ page.title }}
     </h3>
-    <p class="f3 measure-wide dark-gray lh-copy mb6">
-       A place for our collective writing ranging from short posts, to interviews, design retrospectives, and essays. We publish on a monthly schedule and draw inspiration and analogies from permaculture, forestry, gardening, and other natural concepts. </p>
+    <div class="f3 measure-wide dark-gray lh-copy mb0">
+       A place for our collective writing ranging from short posts, to interviews, design retrospectives, and essays. We publish on a monthly schedule and draw inspiration and analogies from permaculture, forestry, gardening, and other natural concepts. 
+      <p><em>
+      A dripline signifies the area under the outermost branches of a tree.
+      It’s this <a href="https://permacultureprinciples.com/principles/_11/" target="_blank" class="accent link underline-hover" rel="noopener">interface</a> between worlds where interesting and productive things happen.
+      </em></p>
+  </div>
   </div>
 </div>
   </header>
