--- a/work.html
+++ b/work.html
@@ -5,38 +5,35 @@ excerpt: "A dripline signifies the area under the outermost branches of a tree. 
 menu_title: Work
 order: 3
 ---
-{% assign posts = site.posts %}
 
 <section class="mt4 ph3 ph5-l">
   <header>
 <div class="flex-l items-center mv2">
   <div class="w-100-l">
-    <p class="worksans">
-      A dripline signifies the area under the outermost branches of a tree.
-      It’s this <a href="https://permacultureprinciples.com/principles/_11/" target="_blank" class="accent link underline-hover" rel="noopener">interface</a> between worlds where interesting and productive things happen.
-    </p>
+    
     <h3 class=" f2 f1-m f-subheadline-l accent normal worksans mb4 lh-solid">
       {{ page.title }}
     </h3>
-    <p class="f3 measure-wide dark-gray lh-copy mb6">
-       A place for our collective writing ranging from short posts, to interviews, design retrospectives, and essays. We publish on a monthly schedule and draw inspiration and analogies from permaculture, forestry, gardening, and other natural concepts. </p>
+    <!-- <p class="f3 measure-wide dark-gray lh-copy mb6"> -->
+       <!-- A place for our collective writing ranging from short posts, to interviews, design retrospectives, and essays. We publish on a monthly schedule and draw inspiration and analogies from permaculture, forestry, gardening, and other natural concepts. </p> -->
   </div>
 </div>
   </header>
-  {%- if posts.size > 0 -%}
-    <div class="flex flex-wrap pl0">
-      {%- assign date_format = site.date_format -%}
-      {%- for post in posts -%}
-      <div class="measure mr5 mr0-s mb4">
-        <a class="no-underline" href="{{ post.url | relative_url }}">
-          <h3 class="f2 mt0 mb3 worksans normal accent link underline-hover lh-title">
-            {{ post.title | escape }}
-          </h3>
-          <p class="mt0 f3 mb3 dark-gray measure lh-copy">{{ post.excerpt }}</p>
-        </a>
-        <h4 class="f4 gray mt0">{%- if post.author != "Hypha" -%}{{ post.author }},&nbsp;{%- endif -%}{{ post.date | date: date_format }}</h4>
-      </div>
-      {%- endfor -%}
-    </div>
-  {%- endif -%}
+<div class="flex flex-wrap justify-left mb4 pv4">
+    {% assign works = site.work | sort: 'order' %}
+    {% for work in works %}
+        <div class="measure flex-column justify-left items-left pr4 mb4 tl pa3 pl0">
+            <div class="w-100 h4 pv3 tl pl3 white bg-accent">Image</div>
+            <h2 class="f2 worksans accent">{{ work.title }}</h2>
+            <div class="pb3 f4  lh-copy">{{ work.content | markdownify }}</div>
+            <div class="flex flex-wrap">
+              {% for work-type in work.work-type %}
+              <div class="accent bw1 b--accent ba ph2 pv0 mv1 mh1 br-pill"> 
+                <p class="lh-solid">{{ work-type }}</p>
+              </div>
+              {% endfor %}
+            </div>
+        </div>
+    {% endfor %}
+</div>
 </section>
