add join the team fix list sizes

--- a/people.html
+++ b/people.html
@@ -23,4 +23,5 @@ order: 2
   </header>
 
 {%- include sections.html path="team-bios.html" class="" -%}
+{%- include sections.html path="join-the-team.html" class="" -%}
 </section>
