--- a/dripline.html
+++ b/dripline.html
@@ -17,7 +17,7 @@ order: 4
     </h3>
     <div class="f3 measure-wide dark-gray lh-copy mb0">
        A place for our collective writing ranging from short posts, to interviews, design retrospectives, and essays. We publish on a monthly schedule and draw inspiration and analogies from permaculture, forestry, gardening, and other natural concepts. 
-      <p><em>
+      <p class=><em>
       A dripline signifies the area under the outermost branches of a tree.
       It’s this <a href="https://permacultureprinciples.com/principles/_11/" target="_blank" class="accent link underline-hover" rel="noopener">interface</a> between worlds where interesting and productive things happen.
       </em></p>
@@ -29,7 +29,7 @@ order: 4
     <div class="flex flex-wrap pl0">
       {%- assign date_format = site.date_format -%}
       {%- for post in posts -%}
-      <div class="measure mr5 mr0-s mb4">
+      <div class="w-33 pr5 mr0-s mb4">
         <a class="no-underline" href="{{ post.url | relative_url }}">
           <h3 class="f2 mt0 mb3 worksans normal accent link underline-hover lh-title">
             {{ post.title | escape }}
