--- a/index.html
+++ b/index.html
@@ -8,5 +8,5 @@ order: 1
 {%- include sections.html path="what-we-do.html" class="" -%}
 {%- include sections.html path="work-preview.html" class="" -%}
 {%- include sections.html path="who-we-are.html" class="" -%}
-{%- include sections.html path="our-values.html" class="" -%}
+{%- include sections.html path="our-values-independent.html" class="" -%}
 {%- include sections.html path="work-with-us.html" class="mv5" -%}
