--- a/work.html
+++ b/work.html
@@ -8,31 +8,32 @@ order: 3
 
 <section class="mt4 ph3 ph5-l">
   <header>
-<div class="flex-l items-center mv2">
+<div class="flex-l items-center mv2 ">
   <div class="w-100-l">
     
-    <h3 class=" f2 f1-m f-subheadline-l accent normal worksans mb6 lh-solid">
+    <h3 class=" f2 f1-m f-subheadline-l accent normal worksans mb4 lh-solid">
       {{ page.title }}
     </h3>
-    <!-- <p class="f3 measure-wide dark-gray lh-copy mb6"> -->
-       <!-- A place for our collective writing ranging from short posts, to interviews, design retrospectives, and essays. We publish on a monthly schedule and draw inspiration and analogies from permaculture, forestry, gardening, and other natural concepts. </p> -->
+    <p class="f3 measure-wide dark-gray lh-copy mb5">
+       Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+       </p>
   </div>
 </div>
   </header>
 <div class="flex flex-wrap justify-left mb4 pv4">
     {% assign works = site.work | sort: 'order' %}
     {% for work in works %}
-        <div class="measure flex-column justify-left items-left pr4 mb4 tl pa3 pl0">
+        <div class="w-33 flex-column justify-left items-left pr5 mb4 tl pa3 pl0">
             <div class="w-100 h4 pv3 tl pl3 white bg-accent">Image</div>
             <h2 class="f2 worksans accent">{{ work.title }}</h2>
             <div class="pb3 f4  lh-copy">{{ work.content | markdownify }}</div>
-            <div class="flex flex-wrap">
+            <!-- <div class="">
               {% for work-type in work.work-type %}
-              <div class="accent bw1 b--accent ba ph2 pv0 mv1 mh1 br-pill"> 
-                <p class="lh-solid">{{ work-type }}</p>
-              </div>
+              <p class="accent bw0  b--accent ba ph1 pv1 mv1 mh1 lh-solid br-pill"> 
+              #{{ work-type }}
+              </p>
               {% endfor %}
-            </div>
+            </div> -->
         </div>
     {% endfor %}
 </div>
