--- a/work.html
+++ b/work.html
@@ -23,7 +23,7 @@ order: 3
 <div class="flex flex-wrap justify-left mb4 pv4">
     {% assign works = site.work | sort: 'order' %}
     {% for work in works %}
-        <div class="w-33 flex-column justify-left items-left pr5 mb4 tl pa3 pl0">
+        <div class="w-33-l w-50-m w-100-s flex-column justify-left items-left pr5 mb4 tl pa3 pl0">
             <div class="w-100 h4 pv3 tl pl3 white bg-accent">Image</div>
             <h2 class="f2 worksans accent">{{ work.title }}</h2>
             <div class="pb3 f4  lh-copy">{{ work.content | markdownify }}</div>
