Remove `worksans` class in favour of Tachyons setting
- Website now uses the default Tachyons `sans-serif` class for font settings as defined in tachyons' _variables.scss file.

- Removed `worksans` class from _hypha.scss

--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@ layout: default
 permalink: /404.html
 ---
 
-<div class="ph3 ph5-l worksans">
+<div class="ph3 ph5-l sans-serif">
   <div class="w-100-l">
     <h3 class="measure-wide f-subheadline accent normal mb2">
       404
