--- a/people.html
+++ b/people.html
@@ -12,7 +12,7 @@ order: 2
 <div class="flex-l items-center mv2">
   <div class="w-100-l">
     
-    <h3 class=" f2 f1-m f-subheadline-l accent normal worksans mb4 lh-solid">
+    <h3 class=" f2 f1-m f-subheadline-l accent normal sans-serif mb4 lh-solid">
       {{ page.title }}
     </h3>
     <p class="f3 measure-wide dark-gray lh-copy mb6">
