--- a/dripline.html
+++ b/dripline.html
@@ -26,18 +26,18 @@ order: 4
 </div>
   </header>
   {%- if posts.size > 0 -%}
-    <div class="flex flex-wrap pl0">
+    <div class="flex flex-wrap justify-center">
       {%- assign date_format = site.date_format -%}
       {%- for post in posts -%}
-      <a class="no-underline" href="{{ post.url | relative_url }}">
-      <div class="measure mr5 mr0-s mb4 db">
+      <div class="measure pr4-l pl4-l pr0-s pl0-s center mb5 db">
+        <a class="no-underline" href="{{ post.url | relative_url }}">
           <h3 class="f3 mt0 mb2 sans-serif normal accent link underline-hover lh-title">
             {{ post.title | escape }}
           </h3>
+        </a>
           <h4 class="f5 fw6 gray mt0">{%- if post.author != "Hypha" -%}{{ post.author }},&nbsp;{%- endif -%}{{ post.date | date: date_format }}</h4>
           <p class="mt0 f5 mb3 dark-gray measure lh-copy">{{ post.excerpt }}</p>
       </div>
-    </a>
       {%- endfor -%}
     </div>
   {%- endif -%}
