--- a/work.html
+++ b/work.html
@@ -23,10 +23,10 @@ order: 3
 <div class="flex flex-wrap justify-left mb4 pv4">
     {% assign works = site.work | sort: 'order' %}
     {% for work in works %}
-        <div class="w-33-l w-50-m w-100-s flex-column justify-left items-left pr5 mb4 tl pa3 pl0">
+        <div class="w-33-l w-50-m w-100-s flex-column justify-left items-left center mb4 tl pl4-l pr4-l pl3-m pr3-m">
             <div class="w-100 h4 pv3 tl pl3 white bg-accent">Image</div>
             <h2 class="f3 sans-serif accent">{{ work.title }}</h2>
-            <div class="pb3 f5 lh-copy">{{ work.content | markdownify }}</div>
+            <div class="pb3 f4 lh-copy">{{ work.content | markdownify }}</div>
             <!-- <div class="">
               {% for work-type in work.work-type %}
               <p class="accent bw0  b--accent ba ph1 pv1 mv1 mh1 lh-solid br-pill"> 
