add logic for values card selection

--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 menu_title: Home
 layout: default
 order: 1
+what_we_do:
+  - title: DWEB
+    description: DWEB lorem
+    visibility: false
+  - title: P2P
+    description: P@P lorem
+    visibility: false
+  - title: Community
+    description: Community lorem
+    visibility: true
 ---
 
 {%- include sections.html path="about.html" class="" -%}
