--- a/index.html
+++ b/index.html
@@ -32,35 +32,44 @@ values:
 {%- include sections.html path="work-with-us.html" class="mv5" -%}
 
   <script>
-    function makeVisible(id) {
+    function makeVisible(id, section) {
       const visibleElement = document.getElementById(`${id}-description`)
       const allValuesClass = visibleElement.className;
-      document.querySelectorAll(`.${allValuesClass}`).forEach(function(el) {
+      document.querySelectorAll(`#${section}-descriptions > p`).forEach(function(el) {
         el.style.display = 'none';
       });
       visibleElement.style.display = "inherit";
 
-    } 
+    }
+    
+    //should take parent id then can be used for both
+    //ideally makePurple should not change the full classes, should just edit background colour and text colour
+    // the purple column should include the dot from hank's design, but not sure how to do that
 
-    function makePurple(id) {
+    function makePurple(id, section) {
       const purpleElement = document.getElementById(`${id}`)
-      document.querySelectorAll("#values >  li").forEach(function(el) {
+      document.querySelectorAll(`#${section} >  li`).forEach(function(el) {
+        //I don't like editing classnames in JS because it mixes design and function
+        //but I can't access the $accent-color sass variables in js to edit the style directly
+        //not sure how to do this otherwise
+        //would be nice if liquid could handle the colour change with its conditional rendering, 
+        //but i don't think that is how it works since it is set during build
         el.className = 'pa3 accent';
       });
       purpleElement.className = "pa3 bg-accent white";
     } 
 
-    function selectValue(id) {
-      makeVisible(id);
-      makePurple(id);
+    function selectValue(id, section) {
+      makeVisible(id, section);
+      makePurple(id, section);
     };
-    function initialState() {
+    function initialState(section) {
       //make only the first card visible initially
-    const testing = "{{ page.what_we_do[0].title }}";
-    makeVisible(testing);
-    makePurple(testing);
+    const first = "{{ page.what_we_do[0].title }}";
+    makeVisible(first, section);
+    makePurple(first, section);
     }
 
-    initialState()
+    initialState('what')
 
   </script>
