--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ values:
 {%- include sections.html path="what-we-do.html" class="" -%}
 {%- include sections.html path="work-preview.html" class="" -%}
 {%- include sections.html path="who-we-are.html" class="" -%}
-{%- include sections.html path="our-values-independent.html" class="" -%}
+{%- include sections.html path="our-values.html" class="" -%}
 {%- include sections.html path="work-with-us.html" class="mv5" -%}
 
   <script>
