add lighten on hover

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ what_we_do:
     description: P@P Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
   - title: Capacity Development
     description: Community Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-  - title: Governange
+  - title: Governance
     description: Governance Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
 values:
   - title: Curiosity
@@ -54,9 +54,9 @@ values:
         //not sure how to do this otherwise
         //would be nice if liquid could handle the colour change with its conditional rendering, 
         //but i don't think that is how it works since it is set during build
-        el.className = "ph4 pv2 accent pointer";
+        el.className = "ph4 pv2 mb2 accent pointer";
       });
-      purpleElement.className = "ph4 pv2 bg-accent white pointer";
+      purpleElement.className = "ph4 pv2 mb2 bg-accent white pointer";
     } 
 
     function selectValue(id, section) {
