update what we do

--- a/index.html
+++ b/index.html
@@ -3,14 +3,12 @@ menu_title: Home
 layout: default
 order: 1
 what_we_do:
-  - title: DWEB & Blockchain
-    description: DWEB Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-  - title: P2P Protocols
-    description: P2P Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+  - title: Decentralized web projects
+    description: We build decentralized web protocols (see our <a href="https://distributed.press/">Distributed Press initiative</a>) and contribute to distributed ledger and blockchain-based projects. Hypha believes peer-to-peer technologies will transform traditional digital hierarchies.
   - title: Capacity Development
-    description: Community Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-  - title: Governance
-    description: Governance Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+    description: "Capacity development is context dependent: we collaborate to understand where you are and where you need to go. If you’re a co-operative or a collective, Hypha has the lived experience and technical expertise to help you flourish."
+  - title: Governance guidance
+    description: We’re a co-op, so we know about the intricacies of working in a coordinated and democratic way. Hypha advises on decentralized governance challenges, and helps cultivate community ownership strategies.
 values:
   - title: Curiosity
     description: Curiosity Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
