--- a/dripline.html
+++ b/dripline.html
@@ -15,7 +15,7 @@ order: 4
     <h3 class=" f2 f1-m f-subheadline-l accent normal sans-serif mb4 lh-solid">
       {{ page.title }}
     </h3>
-    <div class="f3 measure-wide dark-gray lh-copy mb0">
+    <div class="f3 measure-wide  lh-copy mb0">
        A place for our collective writing ranging from short posts, to interviews, design retrospectives, and essays. We publish on a monthly schedule and draw inspiration and analogies from permaculture, forestry, gardening, and other natural concepts. 
       <p class="f4"><em>
       A dripline signifies the area under the outermost branches of a tree.
@@ -36,7 +36,7 @@ order: 4
           </h3>
         </a>
           <h4 class="f5 fw6 gray mt0">{%- if post.author != "Hypha" -%}{{ post.author }},&nbsp;{%- endif -%}{{ post.date | date: date_format }}</h4>
-          <p class="mt0 f5 mb3 dark-gray measure lh-copy">{{ post.excerpt }}</p>
+          <p class="mt0 f5 mb3  measure lh-copy">{{ post.excerpt }}</p>
       </div>
       {%- endfor -%}
     </div>
