--- a/work.html
+++ b/work.html
@@ -15,7 +15,11 @@ order: 3
       {{ page.title }}
     </h3>
     <p class="f3 measure-wide dark-gray lh-copy mb5">
-       Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+      Hypha: (from Ancient Greek ὑφή (huphḗ) meaning 'web'; pl. hyphae) one of the threads that make up the mycelium of a fungus. 
+      <br/>
+      <br/>
+      In ecology, hyphae provide sustenance and communication between living organisms. Drawing inspiration from this infinitely adaptive, complex system, we bring these traits to our work: rooted in knowledge, yet boundless in imagination.
+
        </p>
   </div>
 </div>
