--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@ values:
   - title: Solidarity
     description: We serve our clients, members, neighbours, and the co-operative movement the world over. Hypha embodies the <a href="https://www.ica.coop/en/cooperatives/cooperative-identity">co-operative values</a> and seeks change that strengthens our communities and nurtures our planet.
 ---
-
+<!-- <div class="root-2"> -->
 {%- include sections.html path="about.html" class="" -%}
 {%- include sections.html path="what-we-do.html" class="" -%}
 {%- include sections.html path="work-preview.html" class="" -%}
 {%- include sections.html path="who-we-are.html" class="" -%}
 {%- include sections.html path="our-values.html" class="" -%}
 {%- include sections.html path="work-with-us.html" class="mv5" -%}
-
+<!-- </div> -->
   <script>
     function makeVisible(id, section) {
       const visibleElement = document.getElementById(`${id}-description`)
