--- a/work.html
+++ b/work.html
@@ -28,7 +28,7 @@ order: 3
     {% assign works = site.work | sort: 'order' %}
     {% for work in works %}
         <div class="w-33-l w-50-m w-100-s flex-column justify-left items-left center mb4 tl pl4-l pr4-l pl3-m pr3-m">
-            <div class="w-100 h4  tc f4  pt4 v-mid white bg-accent mb4">styled logo</div>
+            <img class="mw-100 pv0  tc f4   v-mid white  contain mb4" src="{{ work.logo }}" alt="logo"></img>
             <h2 class="f3 sans-serif accent">{{ work.title }}</h2>
             <div class="pb3 f4 lh-copy">{{ work.content | markdownify }}</div>
             <!-- <div class="">
