add new background images

--- a/work.html
+++ b/work.html
@@ -15,7 +15,7 @@ order: 3
       {{ page.title }}
     </h3>
     <p class="f3 measure-wide dark-gray lh-copy mb5">
-      Hypha: (from Ancient Greek ὑφή (huphḗ) meaning 'web'; pl. hyphae) one of the threads that make up the mycelium of a fungus. 
+      <em>Hypha is a word from Ancient Greek meaning 'web' (plural hyphae); referring to one of the threads that make up the mycelium of a fungus.</em> 
       <br/>
       <br/>
       In ecology, hyphae provide sustenance and communication between living organisms. Drawing inspiration from this infinitely adaptive, complex system, we bring these traits to our work: rooted in knowledge, yet boundless in imagination.
