add background images

--- a/dripline.html
+++ b/dripline.html
@@ -18,10 +18,6 @@ order: 4
           {{ page.title }}
         </h3>
         <div class="f3 measure-wide lh-copy mb0">
-          A place for our collective writing ranging from short posts, to
-          interviews, design retrospectives, and essays. We publish on a monthly
-          schedule and draw inspiration and analogies from permaculture,
-          forestry, gardening, and other natural concepts.
           <p class="f4">
             <em>
               A dripline signifies the area under the outermost branches of a
@@ -35,7 +31,8 @@ order: 4
               >
               between worlds where interesting and productive things happen.
             </em>
-          </p>
+          </p>A place for our collective writing ranging from short posts, to
+          interviews, design retrospectives, and essays. 
         </div>
       </div>
     </div>
