--- a/work.html
+++ b/work.html
@@ -14,13 +14,13 @@ order: 3
     <h3 class=" f2 f1-m f-subheadline-l accent normal sans-serif mb4 lh-solid">
       {{ page.title }}
     </h3>
-    <p class="f3 measure-wide dark-gray lh-copy mb5">
-      <em>Hypha is a word from Ancient Greek meaning 'web' (plural hyphae); referring to one of the threads that make up the mycelium of a fungus.</em> 
-      <br/>
-      <br/>
+    <div class="f3 measure-wide dark-gray lh-copy mb5">
+      <p class="f4">
+      <em >Hypha is a word from Ancient Greek meaning 'web' (plural hyphae); referring to one of the threads that make up the mycelium of a fungus.</em> 
+      </p>
+      
       In ecology, hyphae provide sustenance and communication between living organisms. Drawing inspiration from this infinitely adaptive, complex system, we bring these traits to our work: rooted in knowledge, yet boundless in imagination.
 
-       </p>
   </div>
 </div>
   </header>
