--- a/work.html
+++ b/work.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Work
-excerpt: "A dripline signifies the area under the outermost branches of a tree. It's this interface between worlds where interesting and productive things happen."
+excerpt: "Hypha is a word from Ancient Greek meaning 'web' (plural hyphae); referring to one of the threads that make up the mycelium of a fungus."
 menu_title: Work
 order: 3
 ---
@@ -48,3 +48,19 @@ order: 3
     {% endfor %}
 </div>
 </section>
+<script>
+  function toggleBio(id, excerpt, content) {
+    const toggleable = excerpt == content;
+    if (!toggleable) {
+      const el = document.getElementById(id);
+      let toggled = document.getElementById(id).dataset.toggled;
+      if (toggled == "true") {
+        el.innerHTML = excerpt + "<p class='mv0 link accent'> [read more] </p>";
+        el.dataset.toggled = false;
+      } else {
+        el.innerHTML = content + "<p class='mv0 link accent'> [read less] </p>";
+        el.dataset.toggled = true;
+      }
+    }
+  }
+</script>
