--- a/dripline.html
+++ b/dripline.html
@@ -8,10 +8,10 @@ order: 4
 
 {% assign posts = site.posts %}
 
-<section class="mt4 ph3 pl5-l">
+<section class="mt4 ph3 pl5-l ">
   <header class="">
-    <div class="flex-l items-center mv2">
-      <div class="w-100-l mb6">
+    <div class="flex-l items-center mv0">
+      <div class="w-100-l mb5">
         <h3
           class="f2 f1-m f-subheadline-l accent normal sans-serif mb4 lh-solid"
         >
@@ -31,8 +31,10 @@ order: 4
               >
               between worlds where interesting and productive things happen.
             </em>
-          </p>A place for our collective writing ranging from short posts, to
-          interviews, design retrospectives, and essays. 
+          </p>
+          <p>
+          This is the place for our collective writing ranging from short posts, to interviews, design retrospectives, and essays. We publish on a (mostly) monthly schedule. 
+          </p>
         </div>
       </div>
     </div>
