--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 order: 1
 what_we_do:
   - title: Decentralized web projects
-    description: We build decentralized web protocols (see our <a href="https://distributed.press/">Distributed Press initiative</a>) and contribute to distributed ledger and blockchain-based projects. Hypha believes peer-to-peer technologies will transform traditional digital hierarchies.
+    description: We build decentralized web protocols (see our <a href="https://distributed.press/">Distributed Press initiative</a>) and contribute to distributed ledger and blockchain-based projects. Hypha believes peer-to-peer technologies will transform traditional digital collaboration.
   - title: Capacity Development
     description: "Capacity development is context dependent: we collaborate to understand where you are and where you need to go. If you’re a co-operative or a collective, Hypha has the lived experience and technical expertise to help you flourish."
   - title: Governance guidance
